[tool.poetry]
name = "oozemi"
version = "0.1.0"
description = ""
authors = ["daichan132 <wakadai0319@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
graphviz = "^0.20.1"
matplotlib = "^3.7.1"
binarytree = "^6.5.1"
networkx = "^3.1"
pydot = "^1.4.2"
pydot-ng = "^2.0.0"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
